// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchoolSelector it should render when all school ids are selected 1`] = `
<DocumentFragment>
  <table
    class="data-table undefined"
  >
    <thead>
      <tr
        class="data-table-headers"
      >
        <th
          class="data-table-header"
          scope="col"
        >
          <button
            class="quill-checkbox selected"
            type="button"
          >
            <img
              alt="Checked checkbox"
              src="https://assets.quill.org/images/shared/check-small-white.svg"
            />
          </button>
        </th>
        <th
          class="data-table-header name"
          scope="col"
          style="width: 356px; min-width: 356px; text-align: left;"
        >
          Schools
        </th>
      </tr>
    </thead>
    <tbody
      class="data-table-body"
    >
      <tr
        class="data-table-row checked "
      >
        <td>
          <button
            class="quill-checkbox selected data-table-row-section"
            type="button"
          >
            <img
              alt="check"
              src="https://assets.quill.org/images/shared/check-small-white.svg"
            />
          </button>
        </td>
        <td
          class="data-table-row-section name"
          style="width: 356px; min-width: 356px; text-align: left;"
        >
          MLK Middle School
        </td>
      </tr>
      <tr
        class="data-table-row checked "
      >
        <td>
          <button
            class="quill-checkbox selected data-table-row-section"
            type="button"
          >
            <img
              alt="check"
              src="https://assets.quill.org/images/shared/check-small-white.svg"
            />
          </button>
        </td>
        <td
          class="data-table-row-section name"
          style="width: 356px; min-width: 356px; text-align: left;"
        >
          Toni Morrison High School
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`SchoolSelector it should render when there are no selected school ids 1`] = `
<DocumentFragment>
  <table
    class="data-table undefined"
  >
    <thead>
      <tr
        class="data-table-headers"
      >
        <th
          class="data-table-header"
          scope="col"
        >
          <button
            aria-label="Unchecked checkbox"
            class="quill-checkbox unselected"
            type="button"
          />
        </th>
        <th
          class="data-table-header name"
          scope="col"
          style="width: 356px; min-width: 356px; text-align: left;"
        >
          Schools
        </th>
      </tr>
    </thead>
    <tbody
      class="data-table-body"
    >
      <tr
        class="data-table-row  "
      >
        <td>
          <button
            aria-label="Unchecked checkbox"
            class="quill-checkbox unselected data-table-row-section"
            type="button"
          />
        </td>
        <td
          class="data-table-row-section name"
          style="width: 356px; min-width: 356px; text-align: left;"
        >
          MLK Middle School
        </td>
      </tr>
      <tr
        class="data-table-row  "
      >
        <td>
          <button
            aria-label="Unchecked checkbox"
            class="quill-checkbox unselected data-table-row-section"
            type="button"
          />
        </td>
        <td
          class="data-table-row-section name"
          style="width: 356px; min-width: 356px; text-align: left;"
        >
          Toni Morrison High School
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`SchoolSelector it should render when there is one selected school id 1`] = `
<DocumentFragment>
  <table
    class="data-table undefined"
  >
    <thead>
      <tr
        class="data-table-headers"
      >
        <th
          class="data-table-header"
          scope="col"
        >
          <button
            class="quill-checkbox selected"
            type="button"
          >
            <img
              alt="Checked checkbox"
              src="https://assets.quill.org/images/icons/indeterminate.svg"
            />
          </button>
        </th>
        <th
          class="data-table-header name"
          scope="col"
          style="width: 356px; min-width: 356px; text-align: left;"
        >
          Schools
        </th>
      </tr>
    </thead>
    <tbody
      class="data-table-body"
    >
      <tr
        class="data-table-row checked "
      >
        <td>
          <button
            class="quill-checkbox selected data-table-row-section"
            type="button"
          >
            <img
              alt="check"
              src="https://assets.quill.org/images/shared/check-small-white.svg"
            />
          </button>
        </td>
        <td
          class="data-table-row-section name"
          style="width: 356px; min-width: 356px; text-align: left;"
        >
          MLK Middle School
        </td>
      </tr>
      <tr
        class="data-table-row  "
      >
        <td>
          <button
            aria-label="Unchecked checkbox"
            class="quill-checkbox unselected data-table-row-section"
            type="button"
          />
        </td>
        <td
          class="data-table-row-section name"
          style="width: 356px; min-width: 356px; text-align: left;"
        >
          Toni Morrison High School
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
